--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDc2L7RMA_qzBVxIMKD1z6-FfMdOs32Vmc&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDc2L7RMA_qzBVxIMKD1z6-FfMdOs32Vmc&libraries=places,visualization&callback=initMap"
+    async defer></script>
     <title>React App</title>
   </head>
   <body>
